pocket-id/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pocket-id
  labels:
    app.kubernetes.io/name: pocket-id
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: pocket-id
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
